tests/markups/fail-8.expected
ERROR: Tag 'b' does not support attribute 'attr' on line 1 char 31