tests/markups/fail-8.markup
<b attr="not allowed">test</b>
